RESOLVED FIXED160324
ASSERTION FAILED in errorProtoFuncToString() when Error name is a single char string.
https://bugs.webkit.org/show_bug.cgi?id=160324
Summary ASSERTION FAILED in errorProtoFuncToString() when Error name is a single char...
Mark Lam
Reported 2016-07-28 15:57:45 PDT
The issue is that errorProtoFuncToString() is using jsNontrivialString() to generate the error string even when the name string can be a single character string. This is incorrect. We should be using jsString() instead.
Attachments
proposed patch. (2.43 KB, patch)
2016-07-28 16:03 PDT, Mark Lam
keith_miller: review+
Mark Lam
Comment 1 2016-07-28 15:58:58 PDT
Mark Lam
Comment 2 2016-07-28 16:03:03 PDT
Created attachment 284827 [details] proposed patch.
Keith Miller
Comment 3 2016-07-28 16:06:37 PDT
Comment on attachment 284827 [details] proposed patch. r=me.
Mark Lam
Comment 4 2016-07-28 18:25:08 PDT
Thanks for the review. Landed in r203853: <http://trac.webkit.org/r203853>.
Mark Lam
Comment 5 2016-08-04 17:22:14 PDT
*** Bug 149253 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.