ASSERTION FAILED in errorProtoFuncToString() when Error name is a single char string. https://bugs.webkit.org/show_bug.cgi?id=160324 <rdar://problem/27389572>

Reviewed by Keith Miller.

The issue is that errorProtoFuncToString() was using jsNontrivialString() to
generate the error string even when the name string can be a single character
string.  This is incorrect.  We should be using jsString() instead.

* runtime/ErrorPrototype.cpp:
(JSC::errorProtoFuncToString):
* tests/stress/errors-with-simple-names-or-messages-should-not-crash-toString.js: Added.



Canonical link: https://commits.webkit.org/178477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203853 268f45cc-cd09-0410-ab3c-d52691b4dbfc